# whalu

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE.md  README.md  _typos.toml  pyproject.toml
.github/workflows/: code_checks.yml  pages.yml  publish.yml  unit_tests.yml
demo/: generate_data.py  generate_embeddings.py  index.html  script.js  style.css
demo/data/: detections.json  embeddings.json
tests/: test_analysis.py  test_cli.py  test_logging.py  test_mbari.py  test_models.py  test_noaa.py  test_runner.py  test_sources.py  test_species.py  test_store.py
whalu/: __init__.py  _logging.py  analysis.py  sources.py  species.py
whalu/cli/: scan.py
whalu/data/: mbari.py  mbari_local_24k.py  mbari_local_32k.py  noaa.py  orcasound.py
whalu/db/: store.py
whalu/detection/: runner.py
whalu/models/: loader.py
